[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/Object_Pack/First_level_object/background/carpet.png" type="Texture" id=1]
[ext_resource path="res://art/Map/1lv_object/background/carpet.gd" type="Script" id=2]
[ext_resource path="res://art/Object_Pack/First_level_object/background/carpet2.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 177.205

[node name="Carpet" type="Area2D"]
position = Vector2( -1.0817, -39.4718 )
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 0.707123, -14.1422 )
polygon = PoolVector2Array( -21.5203, -31.1378, -50.92, 4.49814, -52.7018, 24.0979, -69.6288, 69.5338, -93.6831, 90.9153, -70.5197, 103.388, -27.7566, 111.406, 1.64307, 117.642, 44.4062, 98.0425, 47.0789, 70.4247, 53.3152, 40.1341, 62.2242, 12.5162, 61.3333, -8.86533, 30.1518, -13.3198, 7.87934, -21.3379, -14.3931, -32.0287 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
position = Vector2( 89.1895, 75.7825 )
texture = ExtResource( 3 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 1.41422, -14.8492 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.88144, 35.9039 )
shape = SubResource( 1 )
[connection signal="body_entered" from="." to="." method="_on_Carpet_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Carpet_body_exited"]
[connection signal="input_event" from="Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
